# S3ManagerAPP

./: .gitignore  .markdownlint.json  .python-version  DEVELOPMENT.md  LINTER_FIXES_SUMMARY.md  Makefile  NETWORK_ISSUE_ANALYSIS.md  Optimiza el rendimiento de tu web WordPr.md  README.md  activate_env.sh  aws_credentials_manager.py  build_macos_app.py  create_dmg_installer.py  create_simple_dmg.py  diagnose_s3_permissions.py  diagnose_s3_permissions_fixed.py  diagnose_s3_permissions_working.py  icon.icns  launch.sh  launch_s3_manager.sh  mypy.ini  pyproject.toml  requirements.txt  s3_manager_app.py
docs/: CHANGELOG_v1.1.1.md  CHANGELOG_v1.1.md  README_S3_Manager.md  README_S3_Manager_v1.1.md  SYSTEM_REQUIREMENTS.md  SYSTEM_REQUIREMENTS_v1.1.md  TESTING_FINAL_REPORT.md  TESTING_FINAL_REPORT_v1.1.md  TESTING_SUMMARY_v1.1.md
tests/: build_complete_app.py  fix_python_libraries.py  test_compatibility.py  test_deletion_functionality.py  test_distribution.py  test_dmg_installer.py  test_features_fixed.py  test_first_run.py  test_gui_complete.py  test_integration_advanced.py  test_integration_complete.py  test_native_app.py  test_performance.py  test_permissions_gui.py  test_s3_functionality.py
